# AgentHQ

./: .gitignore  .mcp.json  CLAUDE.md  SESSION_LOG.md  package.json  render.yaml  setup_mcp.bat
.claude/: settings.json
.claude/agents/: accounting-agent.md  evaluator-agent.md  legal-agent.md  operations-agent.md  strategy-agent.md
.claude/hooks/: _utils.py  agent-test-trigger.py  agent-trace.py  chat-archive-push.py  context-recovery.py  cost-attribution.py  lint-check.py  mcp-health-check.py  memory-index.py  output-quality-gate.py  planning-prompt.py  prompt-enricher.py  safety-guard.py  screenshot-gate.py  session-log.py  (+4 more)
ai-news-bot/: .dockerignore  .env.example  Dockerfile  config.yaml  pyproject.toml  run.bat  start_bot.bat  start_bot_hidden.vbs
ai-news-bot/src/: main.py
ai-news-bot/src/bot/: app.py  formatter.py  keyboards.py  scheduler.py
ai-news-bot/src/bot/handlers/: admin.py  digest.py  freetext.py  settings.py  sources.py  start.py  tags.py
ai-news-bot/src/bot/middlewares/: throttling.py
ai-news-bot/src/config/: settings.py
ai-news-bot/src/processing/: dedup.py  llm.py  pipeline.py  prompts.py  sanitizer.py  scorer.py
ai-news-bot/src/sources/: base.py  nitter.py  rss.py  web_scraper.py
ai-news-bot/src/storage/: database.py  models.py  queries.py
ai-news-bot/src/utils/: rate_limiter.py
ai-news-bot/tests/: conftest.py  test_dedup.py  test_formatter.py  test_llm.py  test_queries.py  test_scorer.py
chat-archives/: README.md
scripts/: backup_chat_archives.py  create_breathing_audio.py  create_unified_excel.py  modify_excel_plan.py
(+73 files in other folders)
