[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news-bot"
version = "0.1.0"
description = "Telegram bot for AI news aggregation with LLM summarization"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15,<4.0",
    "aiosqlite>=0.21.0,<1.0",
    "feedparser>=6.0,<7.0",
    "httpx>=0.28.0,<1.0",
    "openai>=1.0,<2.0",
    "apscheduler>=3.10,<4.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
    "beautifulsoup4>=4.13,<5.0",
    "lxml>=5.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
